week 1 to 3 progress